tests/chapter_11/invalid_parse/bad_specifiers.c
int main(void) {
    /* Cannot declare a variable with two "int" specifiers */
    int LONG64 int i = 0;
    return i;
}